--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MSW_Cookies</title>
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Rubik" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
   </head>
 
   <body>
+
+    <div id="header-container">
+      <h1 id="header">Cookie Counter</h1>
+    </div>
 
     <div id="page-container">
 
@@ -44,7 +49,10 @@
           <div class="total-label">Total</div>
           <input class="total" id="oatmeal-total" type="number" name="" value="">
         </div>
-          <button class="addBtn">Add</button>
+      </div>
+
+      <div id="add-container">
+        <button class="addBtn">Add</button>
       </div>
 
     </div>
