--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MSW_Cookies</title>
+    <link rel="icon" href="images/cookie.png">
     <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Rubik" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
   </head>
