fixed empty string entry bug

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MSW_Cookies</title>
     <link rel="icon" href="images/cookie.png">
-    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Rubik" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Ralewa" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
   </head>
 
@@ -32,22 +32,25 @@
       </div>
 
       <div id="product-container">
+        <div id="product-row">
+          <div id="product-header-container">
+            <div class="header-item">more</div>
+            <div class="header-item">total</div>
+          </div>
+        </div>
         <div class="product-row">
           <div class="product-name">Chocolate</div>
           <input class="adder" id="chocolate-adder" type="number" name="" value="" placeholder="0">
-          <div class="total-label">Total</div>
           <input class="total" id="chocolate-total" type="number" name="" value="">
         </div>
         <div class="product-row">
           <div class="product-name">Ginger</div>
           <input class="adder" id="ginger-adder" type="number" name="" value="" placeholder="0">
-          <div class="total-label">Total</div>
           <input class="total" id="ginger-total" type="number" name="" value="">
         </div>
         <div class="product-row">
           <div class="product-name">Oatmeal</div>
           <input class="adder" id="oatmeal-adder" type="number" name="" value="" placeholder="0">
-          <div class="total-label">Total</div>
           <input class="total" id="oatmeal-total" type="number" name="" value="">
         </div>
       </div>
